# infisical

./: REVIEW.md  docker-compose.dev.yml
.github/ISSUE_TEMPLATE/: 1.bug_report.yml
.github/workflows/: generate-upgrade-impact.yml  helm-release-infisical-core.yml  issue-labeler.yml  run-helm-chart-tests-infisical-gateway.yml  run-helm-chart-tests-infisical-standalone-postgres.yml
backend/: CLAUDE.md  package-lock.json  package.json
backend/e2e-test/: cron-job.spec.ts
backend/e2e-test/mocks/: keystore.ts
backend/scripts/: bake-announcements.ts
backend/src/@types/: fastify.d.ts  knex.d.ts  winrm-client.d.ts
backend/src/keystore/: keystore.ts  memory.ts
backend/src/queue/: queue-service.ts
cloudformation/honey-token-pipeline/: v1.yaml
docs/: docs.json
docs/documentation/platform/: insights.mdx
docs/integrations/app-connections/: aws.mdx  datadog.mdx  ovh.mdx  snowflake.mdx
docs/integrations/secret-syncs/: devin.mdx  snowflake.mdx
docs/snippets/: AppConnectionsBrowser.jsx  RotationsBrowser.jsx  SecretSyncsBrowser.jsx
frontend/.storybook/: preview.tsx
frontend/src/: routeTree.gen.ts  routes.ts
helm-charts/infisical-gateway/: CHANGELOG.md  values.yaml
upgrade-impact/: package-lock.json  package.json
upgrade-impact/data/: index.json  index.yaml
upgrade-impact/scripts/: generate.ts
upgrade-impact/src/: evidence.ts  generate-ai.ts  git.ts  schema.ts  validate.test.ts  validate.ts
wasm/ironrdp-decoder/: CLAUDE.md  Cargo.toml  README.md
wasm/ironrdp-decoder/.cargo/: config.toml
wasm/ironrdp-decoder/src/: lib.rs
(+407 files in other folders)
