[package]
name = "infisical-rdp-decoder-wasm"
version = "0.0.1"
edition = "2021"
description = "Minimal IronRDP-backed decoder for offline session replay (WASM)"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# IronRDP: we reuse upstream's decoders + ActiveStage state machine so the
# replay viewer matches a live session's rendering. Versions match the
# native bridge (packages/pam/handlers/rdp/native/Cargo.toml).
ironrdp-pdu = "0.7"
ironrdp-core = "0.1"
ironrdp-graphics = "0.7"
ironrdp-session = "0.8"
ironrdp-connector = "0.8"
ironrdp-svc = "0.6"

# wasm-bindgen for JS interop.
wasm-bindgen = "0.2"
js-sys = "0.3"

# Error + logging helpers.
anyhow = "1"
tracing = "0.1"
tracing-wasm = "0.2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
